--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Happytails by amaAh</title>
+    <title>Happytails!</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -24,15 +24,7 @@
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="https://github.com/amaAh/HappyTails.github.io" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/amaAh/HappyTails.github.io/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/amaAh/HappyTails.github.io/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
+
 
     <div class="wrapper">
       <nav>
@@ -94,8 +86,8 @@
 </h5>
       </section>
       <footer>
-        <p>Project maintained by <a href="https://github.com/amaAh">amaAh</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+        <p>Project maintained by <a href="https://github.com/amaAh">Capitol Hill Community</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; assisted by <a href="https://twitter.com/CapHillCom">CapHillCommunity</a></small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
